default to 'section' as css_class for component
if a css_class is given, it will be overridden. not all sections are
sections, now. This enables 100% custom CSS on the section.

--- a/lib/capnotify/templates/default_notification.html.erb
+++ b/lib/capnotify/templates/default_notification.html.erb
@@ -72,7 +72,7 @@
   </h1>
 
   <% capnotify.components.each do |component| %>
-  <div class="<%= ['section', component.css_class].join(' ') %>">
+  <div class="<%= component.css_class %>">
     <h2><%= component.header %></h2>
 
     <% if component.content.is_a? Hash %>
