implemented array handling
right now, arrays are simply iterated over and spit out. in the case of
HTML templates, it will be put as <li> elements in a <ul>

--- a/lib/capnotify/templates/default_notification.html.erb
+++ b/lib/capnotify/templates/default_notification.html.erb
@@ -83,7 +83,13 @@
     <% end %>
     </dl>
     <% elsif component.content.is_a? Array %>
-
+      <ul>
+      <% component.content.each do |row| %>
+        <li>
+          <%= row %>
+        </li>
+      <% end %>
+      </ul>
     <% elsif component.content.is_a? String %>
       <%= component.content %>
     <% end %>
