added support for custom CSS

--- a/lib/capnotify/templates/default_notification.html.erb
+++ b/lib/capnotify/templates/default_notification.html.erb
@@ -41,6 +41,11 @@
       text-align: center;
     }
 
+    <% capnotify.components.each do |component| %>
+      <%= component.custom_css %>
+
+    <% end %>
+
   </style>
 </head>
 <body>
