--- a/lib/capnotify/templates/default_notification.html.erb
+++ b/lib/capnotify/templates/default_notification.html.erb
@@ -39,6 +39,7 @@
     #footer {
       font-size: .75em;
       text-align: center;
+      margin-top: 20px;
     }
 
     <% capnotify.components.each do |component| %>
