increased spacing in the <dl> in html view

--- a/lib/capnotify/templates/default_notification.html.erb
+++ b/lib/capnotify/templates/default_notification.html.erb
@@ -24,11 +24,14 @@
       white-space: nowrap;
 
       clear: both;
+
+      margin-bottom: 5px;
     }
 
     dd {
       width: 65%;
       display: inline-block;
+      margin-bottom: 5px;
     }
 
     dl dt {
