wrap strings in a div.content tag to space out

--- a/lib/capnotify/templates/default_notification.html.erb
+++ b/lib/capnotify/templates/default_notification.html.erb
@@ -17,6 +17,11 @@
       padding: 5px 20px;
     }
 
+    .content {
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
+
     dt {
       width: 15%;
       margin-right: 10px;
