--- a/lib/capnotify/templates/default_notification.html.erb
+++ b/lib/capnotify/templates/default_notification.html.erb
@@ -64,6 +64,7 @@
   </h1>
 
   <% capnotify.components.each do |component| %>
+    <% next if component.content.nil? %>
     <div class="<%= component.css_class %>">
       <h2><%= component.header %></h2>
 
