text templates actually render headers now
text templates also will not render sections with no content

--- a/lib/capnotify/templates/default_notification.txt.erb
+++ b/lib/capnotify/templates/default_notification.txt.erb
@@ -1,7 +1,8 @@
 <%= capnotify.appname %> deployment completed!
 
 <% capnotify.components.each do |component| %>
---- <%= @header %> ---
+  <% next if component.content.nil? %>
+--- <%= component.header %> ---
 <%= component.render_content(:txt) %>
 <% end %>
 
